Got a solution to the Navbar/SearchBar problem working. If I can fix the homeContainer and align it properly then i i'll go with this approach.

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -42,6 +42,9 @@
     flex-direction: column;
     align-items: center;
     margin-left: 2rem;
+    /* margin-top: 2rem; */
+    top: 5%;
+    position: sticky;
   }
 
   .navbarLinks {
