--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,3 +1,10 @@
+.homeContainer {
+  width: 100%;
+  /* height: 100vh; */
+  /* padding-left: 15%;
+  padding-top: 10%; */
+}
+
 .header {
   color: white;
 }
